# soil-tiller-calculator

./: .gitignore  README.md  SoilTillerCalculatorDebug.spec  apt-ftparchive.conf  pyproject.toml  soil-tiller-calculator-archive-keyring.asc
.github/workflows/: ci.yml  release-exe.yml
chocolatey/: soil-tiller-calculator.nuspec
chocolatey/tools/: chocolateyInstall.ps1.template  chocolateyUninstall.ps1.template
dists/stable/: InRelease  Release  Release.gpg
dists/stable/main/binary-amd64/: Packages
docs/: chocolatey-release.md
scripts/: build-chocolatey-package.ps1
src/soil_tiller_calculator/: CHANGELOG.json  __init__.py  __main__.py  app.py  calculations.py  config.py  gui.py  localization.py  models.py  version.py
src/soil_tiller_calculator/locales/: en.json  ru.json
tests/: test_calculations.py  test_config.py  test_gui.py  test_startup.py
